package cn.edu.scnu.bullet;

/**
 * 英雄机子弹
 * @author 黄彪骐
 */
public class HeroBullet extends BaseBullet {

    public HeroBullet(int locationX, int locationY, int speedX, int speedY, int power) {
        super(locationX, locationY, speedX, speedY, power);
    }

}
